--- a/src/app.scss
+++ b/src/app.scss
@@ -21,3 +21,20 @@ body{
     background-color: #0c0c1d;
     color: lightgray;
 }
+
+
+
+
+// Tetst Css
+.course{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+    .box{
+        width: 300px;
+        height: 300px;
+        background-color: white;
+    }
+}
