update contact section with animation

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -49,6 +49,14 @@
             gap: 20px;
             align-items: center;
             justify-content: center;
+            position: relative;
+
+            .phoneSvg{
+                stroke: orange;
+                position: absolute;
+                margin: auto;
+                
+            }
 
             form{
                 width: 80%;
