added Services section

--- a/src/components/paralax/paralax.scss
+++ b/src/components/paralax/paralax.scss
@@ -13,7 +13,7 @@
     }
     .mount{
         position: absolute;
-        background-image: url("./mount.png");
+        background-image: url("mount.png");
         background-size: cover;
         background-position: bottom;
         width: 100%;
@@ -22,7 +22,7 @@
     }
     .groho{
         position: absolute;
-        background-image: url("./groho.png");
+        background-image: url("groho.png");
         background-size: cover;
         background-position: bottom;
         width: 100%;
@@ -32,7 +32,7 @@
     }
     .tara{
         position: absolute;
-        background-image: url("./tara.png");
+        background-image: url("tara.png");
         background-size: cover;
         background-position: bottom;
         width: 100%;
@@ -42,7 +42,7 @@
     }
     .sun{
         position: absolute;
-        background-image: url("./sun.png");
+        background-image: url("sun.png");
         background-size: cover;
         background-position: bottom;
         width: 100%;
