--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,10 @@
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+
+
 .portfolio{
 
     .portfolios{
@@ -44,11 +51,20 @@
             .imageContainer{
                 flex:1;
                 height: 50%;
+               
 
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                // overflow: hidden;
+                .img{
+                    width: 500px;
+                    height: 400px;
+                    border: 1px solid white;
+                    border-radius: 0.5rem;
+                    background-size: cover;
+                    background-position-y: 0%;
+                    transition: background-position-y 3s ease-in-out;
+                }
+                .img:hover{
+                    background-position-y: 100%;
                 }
                 
             }
