--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -33,9 +33,8 @@
                 align-items: center;
                 gap: 20px;
 
-                img{
-                    width: 20px;
-                    height: 20px;
+                span{
+                    font-size: 30px;
                 }
 
                 
