--- a/src/components/nabvar/navbar.scss
+++ b/src/components/nabvar/navbar.scss
@@ -14,10 +14,15 @@
             align-items: center;
             gap: 20px;
 
-            img{
-                width: 20px;
-                height: 20px;
+            a{
+
+                span{
+                    width: 15px;
+                    height: 15px;
+                }
             }
+
+            
         }
 
         span{
