--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -92,4 +92,21 @@
             }
         }
     }
+
+
+    @media screen and (max-width: 480px) {
+        .wrapper{
+            display: column;    
+            .textContainer{
+                h1{
+                    font-size: 50px;
+                }
+            }
+            .formContainer{
+               .phoneSvg{
+                   display: none;
+               }
+            }
+        }
+    }
 }
