--- a/src/components/nabvar/navbar.scss
+++ b/src/components/nabvar/navbar.scss
@@ -26,7 +26,7 @@
         }
 
         span{
-            font-size: 30px;
+            // font-size: 30px;
             font-weight: bold;
         }
     }
