--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -15,6 +15,9 @@
 
     .services-container {
         display: flex;
+        align-items: center;
+        justify-content: center;
+
         flex-wrap: wrap;
         justify-content: center;
         gap: 40px;
@@ -44,7 +47,7 @@
         }
 
         h2 {
-            font-size: 24px;
+            // font-size: 24px;
             margin-bottom: 10px;
             color: #333;
         }
@@ -56,3 +59,20 @@
     }
 }
 }
+
+
+@media screen and (max-width: 768px) {
+    .services {
+        .wrapper {
+            .service {
+                text-align: center;
+                flex:  1; 
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+               
+        }
+    }
+}
+    }
