--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,13 +14,13 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            gap: 40px;
+            gap: 30px;
             align-items: center;
             justify-content: center;
 
             h1{
                 font-size: 100px;
-                line-height: 80px;
+                line-height: 70px;
             }
 
             p{
@@ -32,6 +32,7 @@
                 display: flex;
                 align-items: center;
                 gap: 20px;
+                padding-bottom: 10px;
 
                 span{
                     font-size: 30px;
@@ -45,7 +46,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 10px;
             align-items: center;
             justify-content: center;
             position: relative;
@@ -58,7 +59,6 @@
             }
 
             form{
-                width: 80%;
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
