--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -6,7 +6,6 @@
         max-width: 1366px;
         margin: 0 auto;
         display: flex;
-        gap: 50px;
         align-items: center;
         
 
@@ -61,7 +60,8 @@
             form{
                 display: flex;
                 flex-direction: column;
-                gap: 20px;
+                // gap: 20px;
+                // padding: 10px;
 
                 input{
                     padding: 10px;
