--- a/src/components/nabvar/navbar.scss
+++ b/src/components/nabvar/navbar.scss
@@ -2,8 +2,8 @@
     height: 100px;
 
     .wrapper{
+        width: 100%;
         max-width: 1366px;
-        margin: auto;
         display: flex;
         align-items: center;
         justify-content: space-between;
